# od-rom

./: README.md  back.py  cumulative_energy.py  erro.py  final_state.txt  legendre_bases.py  lpol.py  main_compute_errors_for_od_runs.py  main_compute_od_rom_errors.py  main_compute_pod_for_all_partitions.py  main_compute_pod_for_full_domain.py  main_compute_pod_for_global_domain.py  main_compute_pod_for_od_domain.py  main_compute_proj_error.py  main_compute_proj_errors_for_full_domain.py  main_compute_proj_errors_for_global_domain.py  main_compute_proj_errors_for_od.py  main_compute_proj_errors_for_od_domain.py  main_compute_sample_meshes_for_all_partitions.py  main_compute_sample_meshes_for_full_domain.py  main_compute_sample_meshes_for_global_domain.py  main_compute_sample_meshes_for_od_domain.py  main_create_od_partitions.py  main_make_partitions.py  main_pod_global_galerkin.py  main_pod_od_galerkin.py  main_pod_od_galerkin_gappy_masked.py  main_pod_od_galerkin_gappy_real.py  main_run_fom.py  main_run_pod_od_galerkin.py  main_run_pod_od_galerkin_gappy_masked.py  main_run_pod_od_galerkin_gappy_real.py  main_run_pod_standard_galerkin.py  myio.py  observer.py  odrom_full.py  odrom_gappy.py  odrom_masked_gappy.py  odrom_time_integrators.py  partition_radial.py  (+10 more)
2d_burgers/: __init__.py  scenarios.py
2d_eulersmooth/: scenarios.py
2d_gs/: __init__.py  scenarios.py
2d_rti/: __init__.py  scenarios.py
2d_swe/: __init__.py  scenarios.py
code/: main_compute_errors_for_od_runs.py  main_compute_pod_for_global_domain.py  main_compute_pod_for_od_domain.py  main_compute_proj_errors_for_global_domain.py  main_compute_proj_errors_for_od_domain.py  main_compute_sample_meshes_for_global_domain.py  main_compute_sample_meshes_for_od_domain.py  main_compute_tile_local_pod.py  main_create_od_partitions.py  main_create_radial_partitions.py  main_create_rectangular_partitions.py  main_global_galerkin_with_pod.py  main_od_galerkin_with_pod.py  main_od_gappy_galerkin_with_pod.py  main_od_gappy_masked_galerkin_with_pod.py  main_od_quad_galerkin_with_pod.py  main_pod_od_galerkin.py  main_pod_od_galerkin_gappy_masked.py  main_pod_od_galerkin_gappy_real.py  main_pod_od_galerkin_quad_real.py  main_run_fom.py  proj_error_global_domain_single_run.py  run.sh
code/cpp_src/: io.hpp  main_odrom_gappy_single.cc  odrom_multi_gemv_nested.hpp
code/py_problems/: dictionaries.py
code/py_src/: class_legendre_bases.py  class_observer_rom.py  class_odrom_full.py  class_standardrom_full.py  fncs_banners_and_prints.py  fncs_compute_gappy_projector.py  fncs_compute_phi_on_stencil.py  (+5 more)
cpp/: CMakeLists.txt  main_fom.cc  main_fom_perf.cc  main_odrom_gappy.cc  main_rec.cc  odrom_multi_gemm.hpp  odrom_multi_gemv.hpp
cpp/tpls/: build_kokkos.sh
cpp_src/: CMakeLists.txt  main_fom.cc  main_fom_perf.cc  main_odrom_gappy_multi.cc  main_odrom_perf.cc  main_rec_gemm.cc  odrom_single.hpp
docs/: appendix.tex  commands.tex  formulation.tex  intro.tex  main.tex  packages.tex  refs.bib  results.tex
old_code_stuff_if_needed/: entropy_fncs.py
problems/: dictionaries.py
py_problems/: dictionaries.py
py_src/: banners_and_prints.py  class_observer_fom.py  class_observer_rom.py  class_odrom_gappy.py  class_odrom_gappy_masked.py  compute_phi_on_stencil.py  compute_projector.py  directory_naming.py  fncs_banners_and_prints.py  fncs_cumulative_energy.py  fncs_directory_naming.py  fncs_fom_run_dirs_detection.py  fncs_impl_od_galerkin_for_all_test_values.py  fncs_make_od_rom_initial_condition.py  fncs_miscellanea.py  fncs_myio.py  fncs_svd.py  fncs_to_extract_from_mesh_info_file.py  fncs_to_extract_from_yaml_input.py  fom_run_dirs_detection.py  impl_od_galerkin_for_all_test_values.py  make_od_rom_initial_condition.py  mesh_info_file_extractors.py  miscellanea.py  observer.py  odrom_full_class.py  odrom_gappy_class.py  odrom_masked_gappy.py  odrom_time_integrators.py  partition_uniform.py  standardrom_full.py  svd.py  yaml_input_extractors.py
revise/: odrom_full_with_entropy.py  old_with_od_hr_to_revise.py
testProjErr/: errors_in_time.txt  modes_per_tile.txt
to_revise/: wf_errors.py
(+35 files in other folders)
